tests/res/match/error_or_one_sided_binder.say
// An `||` whose sides bind different names contributes no binders to the true branch.
say a = { x: 1 };
say b = { y: 2 };
if match a { x } || match b { y } {
    print(x); // error: Undefined variable 'x'
}
